<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		
        <Button
        	android:id="@+id/addTimeButton"
        	android:layout_width="fill_parent"
        	android:layout_height="70dp"
        	android:layout_alignParentTop="true"
        	android:text="@string/addTime" 
        	android:onClick="addTimeClick"/>
        <Button
        	android:id="@+id/addOnCallButton"
        	android:layout_width="fill_parent"
        	android:layout_height="70dp"
        	android:layout_below="@id/addTimeButton"
        	android:text="@string/addOnCall"
        	android:onClick="addOnCallClick" />
        <Button
        	android:id="@+id/myCalendarButton"
        	android:layout_width="fill_parent"
        	android:layout_height="70dp"
        	android:layout_below="@id/addOnCallButton"
        	android:text="@string/myCalendar"
        	android:onClick="myCalendarClick" />
        <Button
        	android:id="@+id/myTimeButton"
        	android:layout_width="fill_parent"
        	android:layout_height="70dp"
        	android:layout_below="@id/myCalendarButton"
        	android:text="@string/myTime" 
        	android:onClick="myTimeClick"/>
		<Button
        	android:id="@+id/myReportsButton"
        	android:layout_width="fill_parent"
        	android:layout_height="70dp"
        	android:layout_below="@id/myTimeButton"
        	android:text="@string/myReports"
        	android:onClick="myReportsClick" />
       	<Button
        	android:id="@+id/logoutButton"
        	android:layout_width="fill_parent"
        	android:layout_height="70dp"
        	android:layout_below="@id/myReportsButton"
        	android:text="@string/logout" 
        	android:onClick="logoutClick"/>
		
    </RelativeLayout>

</ScrollView>