<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/labelDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:hint="@string/labelDescription"
	        android:padding="10dp"
	        android:textSize="20dp" />
        
        <EditText
        	android:id="@+id/descriptionEditText"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/labelDescription"
        	android:ems="10"
        	android:inputType="textMultiLine"
        	android:minLines="10"
        	android:gravity="top|left" >

        	<requestFocus />
    	</EditText>
    	

        <Button
        	android:id="@+id/submitTimeButton"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/descriptionEditText"
        	android:text="@string/submitTimeButton" />
        <Button
        	android:id="@+id/submitCopyTimeButton"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/submitTimeButton"
        	android:text="@string/submitCopyTimeButton" />
        <Button
        	android:id="@+id/submitAddTimeButton"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/submitCopyTimeButton"
        	android:text="@string/submitAddTimeButton" />
		<Button
        	android:id="@+id/cancelTimeButton"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/submitAddTimeButton"
        	android:text="@string/cancelTimeButton" />
        
    </RelativeLayout>
</ScrollView>