<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/labelChooseDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:hint="@string/labelChooseDate"
	        android:padding="10dp"
	        android:textSize="20dp" />

        <CalendarView
            android:id="@+id/datePickerAddTime"
			android:layout_width="fill_parent"
    		android:layout_height="250dp"
    		android:layout_below='@id/labelChooseDate' />
        
        <TextView
	        android:id="@+id/labelChooseProj"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_below="@id/datePickerAddTime"
	        android:layout_centerHorizontal="true"
	        android:hint="@string/labelChooseProj"
	        android:padding="10dp"
	        android:textSize="20dp" />
        
        <RadioGroup
            android:id="@+id/projRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelChooseProj"
            android:orientation="horizontal"
            android:padding="10dp" >
          
            <RadioButton
                android:id="@+id/internalProjRadio"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:hint="@string/internalProjRadio"
            	android:layout_weight="1"
            	/>
            
            <RadioButton
            	android:id="@+id/myProjRadio" 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:hint="@string/myProjRadio"
            	/>
        
        </RadioGroup>
        
        <!-- Spinner must be programmatically populated; determined using the 
        radio button selection -->
        <Spinner 
        	android:id="@+id/projSpinner"
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/projRadioGroup"
        />
        
    </RelativeLayout>
</ScrollView>