<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->
            
            <!-- Logo End -->
        </LinearLayout>
        <!-- Header Ends -->

        <!-- Footer Starts -->


        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="200dip"
            android:layout_alignParentBottom="true" >


            <WebView
                android:id="@+id/logoWebView"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.57" />

        </LinearLayout>

        <!-- Footer Ends -->

        <!-- Login Form Starts -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Username Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/UName"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="text"
                android:singleLine="true" />
            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/PWord"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />
            
        </LinearLayout>
        <!-- Login Form Ends -->

		<!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/Login" />
    </RelativeLayout>

</ScrollView>